--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test Webpack</title>
 
-  <link rel="stylesheet" href="style.7acb95ec2d48ce808f97.css?dcbbf69727ec2900eec6">
+  <link rel="stylesheet" href="style.e98caf2bb98a13acc5ae.css?4688527b8974e8ede906">
 </head>
 <body>
 
-    <h1>Hello web</h1>
+    <h1>Hello web fffffffffffff</h1>
 
-  <script src="main.d7bb1d4f60cbfd231c31.js?dcbbf69727ec2900eec6"></script>
+  <script src="main.d7bb1d4f60cbfd231c31.js?4688527b8974e8ede906"></script>
   
 </body>
 </html>
